--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = esp-wrover-kit
 framework = espidf
 monitor_speed = 115200
+board_build.partitions = partitions.csv
+board_build.f_cpu = 240000000L
