--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,11 @@
         "chrono": "cpp",
         "ratio": "cpp",
         "fstream": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "condition_variable": "cpp",
+        "mutex": "cpp",
+        "semaphore": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     }
 }
