--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp-wrover-kit]
+[env:esp32s3box]
 platform = espressif32
-board = esp-wrover-kit
+board = esp32s3box
 framework = espidf
 monitor_speed = 115200
 board_build.partitions = partitions.csv
