--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,7 @@ board = esp32s3box
 framework = espidf
 monitor_speed = 115200
 board_build.partitions = partitions.csv
+lib_deps =
+    lvgl/lvgl @ ^8.0.0
+build_flags =
+    -I include
