Hold for home (styling too)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "iomanip": "cpp",
         "span": "cpp",
         "variant": "cpp",
-        "touchdriver.h": "c"
+        "touchdriver.h": "c",
+        "list": "cpp"
     }
 }
