fix broken device

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32s3box
 framework = espidf
 monitor_speed = 115200
 board_build.partitions = partitions.csv
+board_flash_size = 2MB
 lib_deps =
     lvgl/lvgl @ ^8.4.0
 build_flags =
