--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = esp32s3box
 framework = espidf
 monitor_speed = 115200
 board_build.partitions = partitions.csv
-board_flash_size = 2MB
+board_build.flash_mode = qio
+board_build.psram_mode = qio
 lib_deps =
     lvgl/lvgl @ ^8.4.0
 build_flags =
