--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ monitor_speed = 115200
 board_build.partitions = partitions.csv
 board_build.flash_mode = qio
 board_build.psram_mode = qio
+lib_ldf_mode = deep+
 lib_deps =
     lvgl/lvgl @ ^8.4.0
 build_flags =
